container_scripts/k8s-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-api
  namespace: platform
spec:
  selector:
    matchLabels:
      app: insights-api
  replicas: 2
  template:
    metadata:
      labels:
        app: insights-api
    spec:
      containers:
      - name: insights-api
        image: kontur.io/insights-api
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: insights-api
  namespace: platform
  labels:
    app: insights-api
spec:
  selector:
    app: insights-api
  ports:
    - name: data
      protocol: TCP
      port: 8625
      targetPort: 8625
